Add a demo deploy step to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,3 +59,18 @@ jobs:
         with:
           github-token: ${{ secrets.github_token }}
           parallel-finished: true
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    env:
+      DEPLOY_DEMO: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+    steps:
+      - if: ${{ env.DEPLOY_DEMO }}
+        uses: actions/checkout@v2
+      - if: ${{ env.DEPLOY_DEMO }}
+        name: Deploy demo
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
