--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,16 +30,16 @@ jobs:
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
-      - name: Cache Python dependencies
-        id: cache-pipenv
-        uses: actions/cache@v2
-        with:
-          path: ./.venv
-          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-
+#      - name: Cache Python dependencies
+#        id: cache-pipenv
+#        uses: actions/cache@v2
+#        with:
+#          path: ./.venv
+#          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
+#          restore-keys: |
+#            ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-
       - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+#        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install --dev
       - run: gulp lint
