--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,47 @@
 -i https://pypi.python.org/simple
 asgiref==3.4.1; python_version >= '3.6'
-boto3==1.18.48
-botocore==1.21.48; python_version >= '3.6'
+boto3==1.20.5
+botocore==1.23.5; python_version >= '3.6'
+cssselect2==0.4.1; python_version >= '3.6'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20200713; python_version >= '2.7'
 dj-database-url==0.5.0
-django-axes==5.25.0
+django-axes==5.27.0
 django-filter==21.1
-django-import-export==2.6.0
+django-import-export==2.6.1
 django-ipware==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-django-storages==1.11.1
-django-widget-tweaks==1.4.8
-django==3.2.7
+django-storages==1.12.3
+django-widget-tweaks==1.4.9
+django==3.2.9
 djangorestframework==3.12.4
-easy-thumbnails==2.7.1
+easy-thumbnails==2.8
 et-xmlfile==1.1.0; python_version >= '3.6'
-faker==8.14.0
+faker==9.8.1
 gunicorn==20.1.0
-jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
+jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+lxml==4.6.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
-pillow==8.3.2; python_version >= '3.6'
+pillow==8.4.0; python_version >= '3.6'
 plotly==5.3.1
-psycopg2-binary==2.9.1
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-python-dotenv==0.19.0
-pytz==2021.1
-pyyaml==5.4.1
+psycopg2-binary==2.9.2
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dotenv==0.19.2
+pytz==2021.3
+pyyaml==6.0
+reportlab==3.6.2; python_version >= '3.6' and python_version < '4'
 s3transfer==0.5.0; python_version >= '3.6'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.2; python_version >= '3.5'
-tablib[html,ods,xls,xlsx,yaml]==3.0.0; python_version >= '3.6'
+svglib==1.1.0; python_version >= '3'
+tablib[html,ods,xls,xlsx,yaml]==3.1.0; python_version >= '3.6'
 tenacity==8.0.1; python_version >= '3.6'
 text-unidecode==1.3
-uritemplate==3.0.1
+tinycss2==1.1.0; python_version >= '3.6'
+uritemplate==4.1.1
 urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+webencodings==0.5.1
 whitenoise==5.3.0
 xlrd==2.0.1
 xlwt==1.3.0
