Move CI deploy steps conditional to job level

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,13 +61,10 @@ jobs:
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    env:
-      DEPLOY_DEMO: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
-      - if: ${{ env.DEPLOY_DEMO }}
-        uses: actions/checkout@v2
-      - if: ${{ env.DEPLOY_DEMO }}
-        name: Deploy demo
+      - uses: actions/checkout@v2
+      - name: Deploy demo
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
