Lock Django to 3.x
Some Django 4.x deprecations/removals may affect Baby Buddy. And the Easy
Thumbnail dependency does not support Django 4.x yet.

--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ url = "https://pypi.python.org/simple"
 [packages]
 boto3 = "*"
 dj-database-url = "*"
-django = "*"
+django = "==3.*"
 django-axes = "*"
 django-filter = "*"
 django-import-export = "*"
