Replace easy-thumbnails with imagekit
Closes #373

--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,11 @@ dj-database-url = "*"
 django = "==3.*"
 django-axes = "*"
 django-filter = "*"
+django-imagekit = "*"
 django-import-export = "*"
 django-storages = "*"
 django-widget-tweaks = "*"
 djangorestframework = "*"
-easy-thumbnails = "*"
 faker = "*"
 gunicorn = "*"
 plotly = "*"
