--- a/requirements.txt
+++ b/requirements.txt
@@ -7,49 +7,44 @@
 
 -i https://pypi.python.org/simple
 asgiref==3.4.1; python_version >= '3.6'
-boto3==1.20.24
-botocore==1.23.24; python_version >= '3.6'
-cssselect2==0.4.1; python_version >= '3.6'
+boto3==1.20.37
+botocore==1.23.37; python_version >= '3.6'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20200713; python_version >= '2.7'
 dj-database-url==0.5.0
-django-axes==5.28.0
+django-appconf==1.0.5; python_version >= '3.1'
+django-axes==5.31.0
 django-filter==21.1
-django-import-export==2.7.0
+django-imagekit==4.1.0
+django-import-export==2.7.1
 django-ipware==4.0.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 django-storages==1.12.3
-django-widget-tweaks==1.4.9
-django==3.2.10
+django-widget-tweaks==1.4.12
+django==3.2.11
 djangorestframework==3.13.1
-easy-thumbnails==2.8
 et-xmlfile==1.1.0; python_version >= '3.6'
-faker==10.0.0
+faker==11.3.0
 gunicorn==20.1.0
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-lxml==4.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
-pillow==8.4.0; python_version >= '3.6'
-plotly==5.4.0
-psycopg2-binary==2.9.2
+pilkit==2.0
+plotly==5.5.0
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==0.19.2
 pytz==2021.3
 pyyaml==6.0
-reportlab==3.6.3; python_version >= '3.6' and python_version < '4'
 s3transfer==0.5.0; python_version >= '3.6'
-setuptools==59.7.0; python_version >= '3.7'
+setuptools==60.5.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.2; python_version >= '3.5'
-svglib==1.1.0; python_version >= '3'
 tablib[html,ods,xls,xlsx,yaml]==3.1.0; python_version >= '3.6'
 tenacity==8.0.1; python_version >= '3.6'
 text-unidecode==1.3
-tinycss2==1.1.1; python_version >= '3.6'
 uritemplate==4.1.1
-urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-webencodings==0.5.1
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 whitenoise==5.3.0
 xlrd==2.0.1
 xlwt==1.3.0
