Add Pillow (imagekit dependency)

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-widget-tweaks = "*"
 djangorestframework = "*"
 faker = "*"
 gunicorn = "*"
+pillow = "*"
 plotly = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
@@ -26,6 +27,6 @@ whitenoise = "*"
 coveralls = "*"
 flake8 = "*"
 ipaddress = "*"
-tblib = "*"
 mkdocs = "*"
 mkdocs-material = "*"
+tblib = "*"
