--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
 pilkit==2.0
+pillow==9.0.0
 plotly==5.5.0
 psycopg2-binary==2.9.3
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
