--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
       - 'setup/deployment.md'
       - 'setup/configuration.md'
   - 'User Guide':
-    - 'user-guide/navigating.md'
+    - 'user-guide/getting-started.md'
     - 'user-guide/adding-entries.md'
     - 'user-guide/using-timers.md'
   - 'import-export.md'
