Add Managing Users to guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
       - 'setup/configuration.md'
   - 'User Guide':
     - 'user-guide/getting-started.md'
+    - 'user-guide/managing-users.md'
     - 'user-guide/adding-entries.md'
     - 'user-guide/using-timers.md'
   - 'import-export.md'
