--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ python-dotenv = "*"
 pyyaml = "*"
 uritemplate = "*"
 whitenoise = "*"
+django-taggit = "==2.1.0"
 
 [dev-packages]
 coveralls = "*"
@@ -30,3 +31,4 @@ mkdocs = "*"
 mkdocs-material = "*"
 tblib = "*"
 black = "*"
+pydevd = "*"
