--- a/app.json
+++ b/app.json
@@ -32,6 +32,13 @@
             "generator": "secret"
         }
     },
+    "environments": {
+        "review": {
+          "scripts": {
+            "postdeploy": "python manage.py migrate && python manage.py createcachetable && python manage.py reset --no-input"
+          }
+        }
+      },
     "scripts": {
         "postdeploy": "python manage.py migrate && python manage.py createcachetable"
     }
