--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-csso": "^4.0.1",
     "gulp-flatten": "^0.4.0",
     "gulp-fontello": "^0.5.2",
+    "gulp-remove-sourcemaps": "^1.0.4",
     "gulp-sass": "^5.0.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-spawn": "^1.0.0",
