--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - 'Setup':
       - 'setup/deployment.md'
       - 'setup/configuration.md'
+      - 'setup/ssl.md'
       - 'setup/subdirectory.md'
       - 'setup/proxy.md'
   - 'User Guide':
