--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@
 
 -i https://pypi.python.org/simple
 asgiref==3.5.0; python_version >= '3.7'
-boto3==1.20.52
-botocore==1.23.52; python_version >= '3.6'
+backports.zoneinfo==0.2.1; python_version < '3.9'
+boto3==1.21.11
+botocore==1.24.11; python_version >= '3.6'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20200713; python_version >= '2.7'
 dj-database-url==0.5.0
@@ -19,11 +20,12 @@ django-imagekit==4.1.0
 django-import-export==2.7.1
 django-ipware==4.0.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 django-storages==1.12.3
+django-taggit==2.1.0
 django-widget-tweaks==1.4.12
-django==4.0.2
+django==4.0.3
 djangorestframework==3.13.1
 et-xmlfile==1.1.0; python_version >= '3.6'
-faker==12.2.0
+faker==13.3.0
 gunicorn==20.1.0
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 markuppy==1.14
@@ -37,8 +39,8 @@ python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 
 python-dotenv==0.19.2
 pytz==2021.3
 pyyaml==6.0
-s3transfer==0.5.1; python_version >= '3.6'
-setuptools==60.8.2; python_version >= '3.7'
+s3transfer==0.5.2; python_version >= '3.6'
+setuptools==60.9.3; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.2; python_version >= '3.5'
 tablib[html,ods,xls,xlsx,yaml]==3.2.0; python_version >= '3.7'
