--- a/babybuddy/static_src/fontello/config.json
+++ b/babybuddy/static_src/fontello/config.json
@@ -245,6 +245,12 @@
       "css": "measurements",
       "code": 59413,
       "src": "entypo"
+    },
+    {
+      "uid": "4efb719e797c54b3c58e5ae061d29d53",
+      "css": "breastpump",
+      "code": 62631,
+      "src": "entypo"
     }
   ]
 }
