--- a/babybuddy/static_src/fontello/config.json
+++ b/babybuddy/static_src/fontello/config.json
@@ -248,7 +248,7 @@
     },
     {
       "uid": "4efb719e797c54b3c58e5ae061d29d53",
-      "css": "breastpump",
+      "css": "pumping",
       "code": 62631,
       "src": "entypo"
     }
