--- a/render.yaml
+++ b/render.yaml
@@ -10,12 +10,14 @@ services:
     buildCommand: "./.render.com/build.sh"
     startCommand: "gunicorn babybuddy.wsgi:application"
     envVars:
-      - key: DJANGO_SETTINGS_MODULE
-        value: babybuddy.settings.render
       - key: DATABASE_URL
         fromDatabase:
           name: babybuddy
           property: connectionString
+      - key: DJANGO_SETTINGS_MODULE
+        value: babybuddy.settings.render
+      - key: PYTHON_VERSION
+        value: 3.10.4
       - key: SECRET_KEY
         generateValue: true
       - key: WEB_CONCURRENCY
