--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
           github-token: ${{ secrets.github_token }}
           parallel-finished: true
   deploy-docs:
+    needs: test
     name: Deploy docs
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
