--- a/.github/workflows/demo-reset.yml
+++ b/.github/workflows/demo-reset.yml
@@ -1,7 +1,7 @@
 name: Demo reset
 on:
-  schedule:
-    - cron: "0 * * * *"
+#  schedule:
+#    - cron: "0 * * * *"
   workflow_dispatch:
 jobs:
   reset:
