--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,18 @@
 databases:
-  - name: db
+  - name: babybuddy
     plan: free
 
 services:
   - type: web
-    name: app
+    name: babybuddy
+    plan: free
     env: python
     buildCommand: "./.render.com/build.sh"
     startCommand: "gunicorn babybuddy.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: db
+          name: babybuddy
           property: connectionString
       - key: DJANGO_SETTINGS_MODULE
         value: babybuddy.settings.render
