--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: 16
       - run: npm install -g gulp-cli
       - run: npm install
       - name: Install pipenv
