--- a/.github/workflows/demo-reset.yml
+++ b/.github/workflows/demo-reset.yml
@@ -8,13 +8,25 @@ jobs:
     name: Reset
     runs-on: ubuntu-latest
     steps:
-    - name: Install node v16
-      uses: actions/setup-node@v3
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
       with:
-        node-version: 16
+        python-version: "3.10"
+    - uses: actions/cache@v3
+      with:
+        path: ~/.local/share/virtualenvs
+        key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
+    - name: Install pipenv
+      run: python -m pip install --upgrade pipenv wheel
+    - name: Install dependencies
+      run: pipenv install
+    - uses: actions/setup-node@v3
+      with:
+        node-version: "16"
     - name: Install Railway CLI
       run: npm i -g @railway/cli
     - name: Reset demo database
       run: npx railway run python manage.py reset --no-input
       env:
+        DJANGO_SETTINGS_MODULE: babybuddy.settings.railway
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
