--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,40 +9,30 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      DJANGO_SETTINGS_MODULE: babybuddy.settings.ci
-      PIPENV_VENV_IN_PROJECT: enabled
     strategy:
       matrix:
         python-version: [ '3.7', '3.8', '3.9', '3.10' ]
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/setup-node@v2
+      - uses: actions/cache@v3
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
+      - name: Install Python dependencies
+      - run: |
+          python -m pip install --upgrade pipenv wheel
+          pipenv install --dev
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install -g gulp-cli
-      - run: npm install
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pipenv wheel
-#      - name: Cache Python dependencies
-#        id: cache-pipenv
-#        uses: actions/cache@v2
-#        with:
-#          path: ./.venv
-#          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
-#          restore-keys: |
-#            ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-
-      - name: Install dependencies
-#        if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: |
-          pipenv install --dev
-      - run: gulp lint
-      - run: gulp coverage
+      - run: |
+          npm install -g gulp-cli
+          npm install
+          gulp lint
+          gulp coverage
       - name: Submit results to Coveralls
         uses: AndreMiras/coveralls-python-action@develop
         with:
@@ -66,12 +56,11 @@ jobs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
       - name: Checkout main
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v3
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.github_token }}
           REQUIREMENTS: docs/requirements.txt
 #  deploy:
 #    needs: test
