--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
       - name: Install Python dependencies
-      - run: |
+        run: |
           python -m pip install --upgrade pipenv wheel
           pipenv install --dev
       - uses: actions/setup-node@v3
