--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
+        id: setup-python
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/cache@v3
