--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,9 @@ jobs:
     needs: test
     name: Deploy docs
     runs-on: ubuntu-latest
-    environment: documentation
+    environment:
+      name: documentation
+      url: https://docs.baby-buddy.net
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
       - name: Checkout main
