Re-enable demo deploy job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,15 +65,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           REQUIREMENTS: docs/requirements.txt
-#  deploy:
-#    needs: test
-#    runs-on: ubuntu-latest
-#    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Deploy demo
-#        uses: akhileshns/heroku-deploy@v3.12.12
-#        with:
-#          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-#          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
-#          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+  deploy-demo:
+    needs: test
+    runs-on: ubuntu-latest
+    environment:
+      name: demo
+      url: https://demo.baby-buddy.net
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy demo
+        run: npx railway up
+        env:
+          DJANGO_SETTINGS_MODULE: babybuddy.settings.railway
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
