--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,7 +26,9 @@ jobs:
         python-version: '3.x'
     - uses: actions/cache@v3
       with:
-        path: ~/.local/share/virtualenvs
+        path: |
+          ~/.local/share/virtualenvs
+          Pipfile.lock
         key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
     - uses: github/codeql-action/init@v2
       with:
