--- a/.github/workflows/demo-reset.yml
+++ b/.github/workflows/demo-reset.yml
@@ -18,7 +18,9 @@ jobs:
         python-version: '3.x'
     - uses: actions/cache@v3
       with:
-        path: ~/.local/share/virtualenvs
+        path: |
+          ~/.local/share/virtualenvs
+          Pipfile.lock
         key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
     - name: Install pipenv
       run: python -m pip install --upgrade pipenv wheel
