--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,23 +14,9 @@ jobs:
         python-version: [ '3.7', '3.8', '3.9', '3.10' ]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        id: setup-python
+      - uses: ./.github/actions/setup
         with:
           python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.local/share/virtualenvs
-            Pipfile.lock
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pipenv wheel
-          pipenv install --dev
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
       - run: |
           npm install -g gulp-cli
           npm install
@@ -74,6 +60,9 @@ jobs:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
     steps:
       - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup
+      - name: Install Railway CLI
+        run: npm i -g @railway/cli
       - name: Deploy demo
         run: npx railway up
         env:
