--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,23 +20,10 @@ jobs:
         language: [ 'javascript', 'python' ]
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v3
-      id: setup-python
-      with:
-        python-version: '3.x'
-    - uses: actions/cache@v3
-      with:
-        path: |
-          ~/.local/share/virtualenvs
-          Pipfile.lock
-        key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
     - uses: github/codeql-action/init@v2
       with:
         config-file: ./.github/codeql/codeql-config.yml
         languages: ${{ matrix.language }}
         setup-python-dependencies: false
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pipenv wheel
-        pipenv install
+    - uses: ./.github/actions/setup
     - uses: github/codeql-action/analyze@v2
