--- a/.github/workflows/demo-reset.yml
+++ b/.github/workflows/demo-reset.yml
@@ -12,23 +12,7 @@ jobs:
       url: https://demo.baby-buddy.net
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v3
-      id: setup-python
-      with:
-        python-version: '3.x'
-    - uses: actions/cache@v3
-      with:
-        path: |
-          ~/.local/share/virtualenvs
-          Pipfile.lock
-        key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('**/requirements.txt') }}
-    - name: Install pipenv
-      run: python -m pip install --upgrade pipenv wheel
-    - name: Install dependencies
-      run: pipenv install
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+    - uses: ./.github/actions/setup
     - name: Install Railway CLI
       run: npm i -g @railway/cli
     - name: Reset demo database
