Disable demo deploy CI job
Demo deployments will be triggered via Railway.app in order to support PR
environment deployments as well.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,20 +51,20 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           REQUIREMENTS: docs/requirements.txt
-  deploy-demo:
-    needs: test
-    runs-on: ubuntu-latest
-    environment:
-      name: demo
-      url: https://demo.baby-buddy.net
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup
-      - name: Install Railway CLI
-        run: npm i -g @railway/cli
-      - name: Deploy demo
-        run: npx railway up
-        env:
-          DJANGO_SETTINGS_MODULE: babybuddy.settings.railway
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+#  deploy-demo:
+#    needs: test
+#    runs-on: ubuntu-latest
+#    environment:
+#      name: demo
+#      url: https://demo.baby-buddy.net
+#    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: ./.github/actions/setup
+#      - name: Install Railway CLI
+#        run: npm i -g @railway/cli
+#      - name: Deploy demo
+#        run: npx railway up
+#        env:
+#          DJANGO_SETTINGS_MODULE: babybuddy.settings.railway
+#          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
