--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "url": "https://github.com/babybuddy/babybuddy.git"
   },
   "devDependencies": {
+    "@eonasdan/tempus-dominus": "^6.0.0-beta7",
+    "@popperjs/core": "^2.11.5",
     "@ronilaukkarinen/gulp-stylelint": "^14.0.6",
     "bootstrap": "^4.6.1",
     "del": "^6.1.1",
@@ -25,16 +27,13 @@
     "moment-timezone": "^0.5.34",
     "npm-force-resolutions": "^0.0.10",
     "plotly.js": "^2.12.1",
-    "popper.js": "^1.16.1",
     "pulltorefreshjs": "^0.1.22",
     "pump": "^3.0.0",
     "sass": "^1.52.1",
     "stylelint": "^14.8.5",
     "stylelint-config-recommended-scss": "^6.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.2.0",
-    "tempusdominus-bootstrap-4": "5.39.2",
-    "tempusdominus-core": "5.19.3"
+    "stylelint-scss": "^4.2.0"
   },
   "scripts": {
     "preinstall": "npx npm-force-resolutions"
