--- a/package.json
+++ b/package.json
@@ -36,11 +36,7 @@
     "tempusdominus-bootstrap-4": "5.39.2",
     "tempusdominus-core": "5.19.3"
   },
-  "scripts": {
-    "preinstall": "npx npm-force-resolutions"
-  },
-  "resolutions": {
-    "lodash.template": ">=4.5.0",
-    "glob-parent": ">=5.1.2"
+  "dependencies": {
+    "gulp-cli": "^2.3.0"
   }
 }
