--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 boto3 = "*"
 dj-database-url = "*"
-django = ">=4.0.6"
+django = "==4.0.7"
 django-axes = "*"
 django-filter = "*"
 django-imagekit = "*"
