--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
 pyyaml==6.0
+qrcode==7.3.1
 s3transfer==0.6.0
 setuptools==63.1.0
 six==1.16.0
