Remove qrcode library and replace with django-qre-code
Required some rework to make qr-codes work via a template machanism. I think
that the new solution is working neatly as well.

--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ pyyaml = "*"
 uritemplate = "*"
 whitenoise = "*"
 django-taggit = "*"
-qrcode = "*"
+django-qr-code = "*"
 
 [dev-packages]
 coveralls = "*"
