--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.2",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
+    "gulp-all": "^1.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^4.0.1",
     "gulp-flatten": "^0.4.0",
@@ -28,7 +29,6 @@
     "plotly.js": "^2.15.1",
     "popper.js": "^1.16.1",
     "pulltorefreshjs": "^0.1.22",
-    "pump": "^3.0.0",
     "sass": "^1.55.0",
     "stylelint": "^14.13.0",
     "stylelint-config-recommended-scss": "^7.0.0",
