--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -1,14 +1,13 @@
 name: "Review app"
 env:
    DOKKU_GIT_REMOTE_URL: 'ssh://dokku@dokku.baby-buddy.net:22'
-   TRIGGER_LABEL: 'to review'
 on:
   pull_request:
     types: [labeled, unlabeled]
 jobs:
   create-review-app:
     runs-on: ubuntu-latest
-    if: github.event_name == 'labeled' && github.event.label.name == ${{ env.TRIGGER_LABEL }}
+    if: github.event_name == 'labeled' && github.event.label.name == 'to review'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -22,7 +21,7 @@ jobs:
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
   destroy-review-app:
     runs-on: ubuntu-latest
-    if: github.event_name == 'unlabeled' && github.event.label.name == ${{ env.TRIGGER_LABEL }}
+    if: github.event_name == 'unlabeled' && github.event.label.name == 'to review'
     steps:
       - name: Destroy review app
         uses: dokku/github-action@master
