--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   create-review-app:
     runs-on: ubuntu-latest
+    environment:
+      name: pr-${{ github.event.pull_request.number }}
+      url: https://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
     if: github.event_name == 'labeled' && github.event.label.name == 'to review'
     steps:
       - uses: actions/checkout@v3
@@ -21,6 +24,9 @@ jobs:
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
   destroy-review-app:
     runs-on: ubuntu-latest
+    environment:
+      name: pr-${{ github.event.pull_request.number }}
+      url: https://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
     if: github.event_name == 'unlabeled' && github.event.label.name == 'to review'
     steps:
       - name: Destroy review app
@@ -30,3 +36,8 @@ jobs:
           git_remote_url: ${{ env.DOKKU_GIT_REMOTE_URL }}/demo
           review_app_name: pr-${{ github.event.pull_request.number }}
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
+      - name: Delete environment
+        uses: strumwolf/delete-deployment-environment@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: pr-${{ github.event.pull_request.number }}
