--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -10,7 +10,7 @@ jobs:
     environment:
       name: pr-${{ github.event.pull_request.number }}
       url: https://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
-    if: ${{ github.event_name == 'labeled' && github.event.label.name == 'to review' }}
+    if: github.event_name == 'labeled' && github.event.label.name == 'to review'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -27,7 +27,7 @@ jobs:
     environment:
       name: pr-${{ github.event.pull_request.number }}
       url: https://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
-    if: ${{ github.event_name == 'unlabeled' && github.event.label.name == 'to review' }}
+    if: github.event_name == 'unlabeled' && github.event.label.name == 'to review'
     steps:
       - name: Destroy review app
         uses: dokku/github-action@master
