--- a/.github/workflows/review-app.yml
+++ b/.github/workflows/review-app.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pr-${{ github.event.pull_request.number }}
-      url: https://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
+      url: http://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
     if: github.event.action == 'labeled' && github.event.label.name == 'to review'
     steps:
       - uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pr-${{ github.event.pull_request.number }}
-      url: https://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
+      url: http://pr-${{ github.event.pull_request.number }}.dokku.baby-buddy.net
     if: github.event.action == 'unlabeled' && github.event.label.name == 'to review'
     steps:
       - name: Destroy review app
