--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,48 @@
 -i https://pypi.python.org/simple
-asgiref==3.5.2; python_version >= '3.7'
-boto3==1.24.89
-botocore==1.27.89; python_version >= '3.7'
-defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-diff-match-patch==20200713; python_version >= '2.7'
-dj-database-url==1.0.0
-django==4.1.2
-django-appconf==1.0.5; python_version >= '3.1'
-django-axes==5.39.0
+asgiref==3.6.0 ; python_version >= '3.7'
+boto3==1.26.59
+botocore==1.29.59 ; python_version >= '3.7'
+defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+diff-match-patch==20200713 ; python_version >= '2.7'
+dj-database-url==1.2.0
+django==4.1.5
+django-appconf==1.0.5 ; python_version > '3'
+django-axes==5.40.1
 django-filter==22.1
 django-imagekit==4.1.0
-django-import-export==2.9.0
-django-ipware==4.0.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-django-storages==1.13.1
+django-import-export==3.0.2
+django-ipware==4.0.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 django-qr-code==3.1.1
-django-taggit==3.0.0
+django-storages==1.13.2
+django-taggit==3.1.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
-et-xmlfile==1.1.0; python_version >= '3.6'
-faker==15.1.0
+et-xmlfile==1.1.0 ; python_version >= '3.6'
+faker==16.6.1
 gunicorn==20.1.0
-jmespath==1.0.1; python_version >= '3.7'
+jmespath==1.0.1 ; python_version >= '3.7'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.0.10
 pilkit==2.0
-pillow==9.2.0
-plotly==5.10.0
-psycopg2-binary==2.9.4
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==0.21.0
-pytz==2022.4
+pillow==9.4.0
+plotly==5.13.0
+psycopg2-binary==2.9.5
+pydantic==1.10.4 ; python_version >= '3.7'
+python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dotenv==0.21.1
+pytz==2022.7.1
 pyyaml==6.0
-s3transfer==0.6.0; python_version >= '3.7'
-setuptools==65.4.1; python_version >= '3.7'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlparse==0.4.3; python_version >= '3.5'
-tablib[html,ods,xls,xlsx,yaml]==3.2.1; python_version >= '3.7'
-tenacity==8.1.0; python_version >= '3.6'
+s3transfer==0.6.0 ; python_version >= '3.7'
+segno==1.5.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+setuptools==67.0.0 ; python_version >= '3.7'
+six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+sqlparse==0.4.3 ; python_version >= '3.5'
+tablib[html,ods,xls,xlsx,yaml]==3.3.0 ; python_version >= '3.7'
+tenacity==8.1.0 ; python_version >= '3.6'
+typing-extensions==4.4.0 ; python_version >= '3.7'
 uritemplate==4.1.1
-urllib3==1.26.12; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
-whitenoise==6.2.0
+urllib3==1.26.14 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+whitenoise==6.3.0
 xlrd==2.0.1
 xlwt==1.3.0
