Update Python dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 boto3 = "*"
 dj-database-url = "*"
-django = "==4.0.7"
+django = "*"
 django-axes = "*"
 django-filter = "*"
 django-imagekit = "*"
@@ -33,3 +33,4 @@ mkdocs = "*"
 mkdocs-material = "*"
 tblib = "*"
 black = "*"
+pysnooper = "*"
