Use django-dbsettings package for site settings

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ uritemplate = "*"
 whitenoise = "*"
 django-taggit = "*"
 django-qr-code = "*"
+django-dbsettings = "*"
 
 [dev-packages]
 coveralls = "*"
