Lock Pillow at 9.5.0
Fixes #684

Django-imagekit has a dependency on pilkit which is using the removed attribute.

See:
 - https://github.com/matthewwithanm/django-imagekit/issues/566
 - https://github.com/matthewwithanm/pilkit/issues/64

--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ django-widget-tweaks = "*"
 djangorestframework = "*"
 faker = "*"
 gunicorn = "*"
-pillow = "*"
+pillow = "===9.5.0"
 plotly = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
