--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 -i https://pypi.python.org/simple
 annotated-types==0.5.0 ; python_version >= '3.7'
 asgiref==3.7.2 ; python_version >= '3.7'
-boto3==1.28.1
-botocore==1.31.1 ; python_version >= '3.7'
+boto3==1.28.15
+botocore==1.31.15 ; python_version >= '3.7'
 defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20230430 ; python_version >= '3.7'
 dj-database-url==2.0.0
@@ -19,23 +19,23 @@ django-taggit==4.0.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 et-xmlfile==1.1.0 ; python_version >= '3.6'
-faker==18.13.0
-gunicorn==20.1.0
+faker==19.2.0
+gunicorn==21.2.0
 jmespath==1.0.1 ; python_version >= '3.7'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.1.2
 packaging==23.1 ; python_version >= '3.7'
 pilkit==2.0
-pillow==10.0.0
+pillow===9.5.0
 plotly==5.15.0
 psycopg2-binary==2.9.6
-pydantic==2.0.2 ; python_version >= '3.7'
-pydantic-core==2.1.2 ; python_version >= '3.7'
+pydantic==2.1.1 ; python_version >= '3.7'
+pydantic-core==2.4.0 ; python_version >= '3.7'
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0
 pytz==2023.3
-pyyaml==6.0
+pyyaml==6.0.1
 s3transfer==0.6.1 ; python_version >= '3.7'
 segno==1.5.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 setuptools==68.0.0 ; python_version >= '3.7'
