feat: devenv support for reproducible developer environment using nix

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,14 @@ Pipfile.lock
 
 # macOS files
 .DS_Store
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
