refactor: ditch docker container support in favor of simpler nix

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,7 +2,9 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "mkhl.direnv"
+        "bbenoist.Nix",
+        "ms-python.python",
+        "batisteo.vscode-django"
       ]
     }
   },
