--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '33 0 * * 3'
+    - cron: "33 0 * * 3"
 jobs:
   analyze:
     name: Analyze
@@ -19,13 +19,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript', 'python' ]
+        language: ["javascript", "python"]
     steps:
-    - uses: actions/checkout@v4
-    - uses: github/codeql-action/init@v3
-      with:
-        config-file: ./.github/codeql/codeql-config.yml
-        languages: ${{ matrix.language }}
-        setup-python-dependencies: false
-    - uses: ./.github/actions/setup
-    - uses: github/codeql-action/analyze@v3
+      - uses: actions/checkout@v4
+      - uses: github/codeql-action/init@v3
+        with:
+          config-file: ./.github/codeql/codeql-config.yml
+          languages: ${{ matrix.language }}
+          setup-python-dependencies: false
+      - uses: ./.github/actions/setup
+      - uses: github/codeql-action/analyze@v3
